# SerenaCLI

./: .gitmodules  README.md  client.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
serena-native-wrapper/: AGENTS.md  README.md  pyproject.toml
serena-native-wrapper/.github/workflows/: build_and_release.yml
serena-native-wrapper/scripts/: build_nuitka.sh
serena-native-wrapper/src/serena_native/: cli.py  config.py  logging_utils.py  serena_client.py
serena-native-wrapper/tests/: test_cli.py
src/serena_cli/: main.py
tests/: test_main.py
